<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dnsChangetextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_that_adhell_must_be_enabled" />

    <EditText
        android:id="@+id/dns_address_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dnsChangetextView"
        android:digits="0123456789."
        android:hint="@string/dns_1_address"
        android:inputType="number|numberDecimal"
        android:text="@string/zero_dns">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/dns_address_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dns_address_1"
        android:digits="0123456789."
        android:hint="@string/dns_2_address"
        android:inputType="number|numberDecimal"
        android:text="@string/zero_dns" />

    <Button
        android:id="@+id/changeDnsOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dns_address_2"
        android:text="@string/set_dns_button_text" />

    <Button
        android:id="@+id/changeDnsCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dns_address_2"
        android:layout_toRightOf="@+id/changeDnsOkButton"
        android:text="@string/cancel_text" />

    <Button
        android:id="@+id/restoreDefaultDnsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dns_address_2"
        android:layout_toRightOf="@+id/changeDnsCancelButton"
        android:text="@string/restore_defaults" />
</RelativeLayout>
