<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView
        android:id="@+id/isSupportedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isSupported"/>

    <Button
        android:id="@+id/policyChangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/wait"/>

    <Button
        android:text="@string/edit_block_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/editUrls" />

    <TextView
        android:text="@string/editAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editAlert"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:paddingLeft="5pt"
        android:paddingRight="5pt" />
</LinearLayout>