<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <TextView
        android:id="@+id/blockUrlProviderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/adaway_hosts" />

    <TextView
        android:id="@+id/blockUrlCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blockUrlProviderTextView"
        android:singleLine="true"
        android:text="@string/_2597" />

    <CheckBox
        android:id="@+id/urlProviderCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:checked="false" />

    <ImageView
        android:id="@+id/deleteUrlProviderImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/urlProviderCheckBox"
        android:layout_toStartOf="@+id/urlProviderCheckBox"
        android:contentDescription="@string/delete_url"
        android:src="@drawable/ic_delete_grey600_24dp" />

    <TextView
        android:id="@+id/lastUpdatedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/deleteUrlProviderImageView"
        android:text="@string/_2017_06_30_16_00_00" />

</RelativeLayout>