<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView android:id="@+id/notifyTextView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/thank_you_we_will_notify_you"/>

    <TextView android:id="@+id/changeEmailTextView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/edit_email"/>
    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10" android:inputType="textEmailAddress"/>
    <Button
        android:id="@+id/editEmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"/>

</LinearLayout>